--- a/styles.css
+++ b/styles.css
@@ -109,3 +109,14 @@ button{
     display: inline;
     text-decoration: none;
 }
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    .carousel-item img{
+        height: 280px;
+    }
+    .carousel .carousel-item {
+        height: 280px;
+    }
+
+}
